--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     <li class="content__list-item">
                         <a href="Modul_2_lesson_10/index.html">Модуль 2 урок 10</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="Modul_2_lesson_25/index.html">Модуль 2 урок 25</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
