--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <li class="content__list-item">
                         <a href="Modul_2_lesson_25/index.html">Модуль 2 урок 25</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="Modul_2_lesson_33/index.html">Модуль 2 урок 33</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
