--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                      <li class="content__list-item">
                         <a href="Modul_2_lesson_33/index.html">Модуль 2 урок 33</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="Modul_2_lesson_44/index.html">Модуль 2 урок 44</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
